// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<List.Item /> should render with a link 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link="url/to/somewhere"
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <Glow
    className={null}
  >
    <div>
      <Link
        href="url/to/somewhere"
        onClick={null}
      >
        <div />
      </Link>
    </div>
  </Glow>
</Item>
`;

exports[`<List.Item /> should render with a right component 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={
    <span>
      I\`m a span.
    </span>
  }
  testId={null}
  title="My Title"
>
  <Grid
    className="css-1qcr7hz"
    component="div"
    wrap={false}
  >
    <div
      className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
    >
      <GridItem
        className="css-10fxwvh"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="sg-xljr6b-root css-10fxwvh"
        >
          My Title
        </div>
      </GridItem>
      <GridItem
        className=""
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="sg-xljr6b-root"
        >
          <span>
            I\`m a span.
          </span>
        </div>
      </GridItem>
    </div>
  </Grid>
</Item>
`;

exports[`<List.Item /> should render with a title but no image 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <Grid
    className="css-1qcr7hz"
    component="div"
    wrap={false}
  >
    <div
      className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
    >
      <GridItem
        className="css-10fxwvh"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="sg-xljr6b-root css-10fxwvh"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</Item>
`;

exports[`<List.Item /> should render with an image 1`] = `
<Item
  className={null}
  image={
    <img
      alt="Alternative text"
      src="url/to/image"
    />
  }
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <Grid
    className="css-1qcr7hz"
    component="div"
    wrap={false}
  >
    <div
      className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
    >
      <div
        className="css-jwxytc"
      >
        <img
          alt="Alternative text"
          src="url/to/image"
        />
      </div>
      <GridItem
        className="css-10fxwvh"
        component="div"
        grow={1}
        shrink={1}
      >
        <div
          className="sg-xljr6b-root css-10fxwvh"
        >
          My Title
        </div>
      </GridItem>
    </div>
  </Grid>
</Item>
`;

exports[`<List.Item /> should render with an onClick element 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  onClick={[Function]}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    tabIndex={0}
  >
    <Glow
      className={null}
    >
      <div>
        <Grid
          className="css-1qcr7hz"
          component="div"
          wrap={false}
        >
          <div
            className="common__grid css-1qcr7hz sg-190r8b9-root-noWrap"
          >
            <GridItem
              className="css-10fxwvh"
              component="div"
              grow={1}
              shrink={1}
            >
              <div
                className="sg-xljr6b-root css-10fxwvh"
              >
                My Title
              </div>
            </GridItem>
          </div>
        </Grid>
      </div>
    </Glow>
  </div>
</Item>
`;
